--- a/CLSS.Types.AgnosticObjectPool.csproj
+++ b/CLSS.Types.AgnosticObjectPool.csproj
@@ -10,10 +10,9 @@
     <RepositoryUrl>https://github.com/tonygiang/CLSS.Types.AgnosticObjectPool</RepositoryUrl>
     <PackageTags>CLSS</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>1.0.1</Version>
+    <Version>1.1</Version>
     <PackageReleaseNotes>
-      - Improved comment.
-      - Improved README description.
+      - Fixed an IndexOutOfRangeException when TakeOne triggers a growth.
     </PackageReleaseNotes>
   </PropertyGroup>
 
